# modern-distributed-app-template

./: Makefile  README.md  install-tools.sh
cloudInfrastructure/: Pulumi.development.yaml  package-lock.json  package.json
cloudInfrastructure/scripts/: deployCloudInfra.ts
cloudInfrastructure/scripts/utils/: argv.ts
cloudInfrastructure/src/linode/: lkeCluster.ts
infrastructure/: package.json  pnpm-lock.yaml  rome.json
infrastructure/cloud/: vite.config.ts
infrastructure/kubernetes/: package.json  rome.json  tsconfig.json  vite.config.ts  zz.sh
infrastructure/kubernetes/generatedHelmChartsTsTypes/: linkerdControlPlaneLinkerd.ts
infrastructure/kubernetes/scripts/: syncConfigs.ts
infrastructure/linode/: package.json  tsconfig.json
kubernetes/: Makefile  deno.json  import_map.json  index.ts  lke.yaml  nginx.yaml  nginx2.yaml  package-lock.json  package.json  s3.yaml  secret.yaml  tsconfig.json  v.yaml  xxx  z.lua  z.sh  z.ts  z.yaml  zargo-ev-values.yaml  zargow.yaml  zargowpre.yaml  zax.yaml  zdocker.sh  zdocker.yaml  zevent.yaml  zgit.yaml  zgitt-kubernetes.yaml  zgitt-rust.yaml  zgitt-typescript.yaml  zgitt.yaml  zt.yaml  zz.yaml  zzz.json  zzz.sh  zzzz.json  zzzzz.yaml
kubernetes/scripts/: bootStrapCluster.ts  bootstrapLocalCluster.ts  deleteLocalClusters.ts  deployCloudInfra.ts  generateManifestsCi.ts  generateSealedSecrets.ts  logIngressDomain.ts  syncConfigs.ts
kubernetes/scripts/utils/: argv.ts  plainSecretsManager.ts  promptKubernetesClusterSwitch.ts  setupCluster.ts  shared.ts  syncCrdsCode.ts  syncEtcHostsWithCustomHosts.ts  syncHelmChartTypesDeclarations.ts
kubernetes/src/shared/: deployment.ts  directoriesManager.ts  environmentVariablesForManifests.ts  helpers.ts
kubernetes/src/types/: sealedSecretTemplate.ts
rust/: Dockerfile.production
rust/app-graphql-surrealdb/: Cargo.toml
rust/app-graphql-surrealdb/src/: lib.rs  main-surreakdb.txt  main.backup.txt  main.rs
rust/app-graphql-surrealdb/src/app/: mod.rs
rust/app-graphql-surrealdb/src/app/post/: model.rs  mutation_root.rs  query_root.rs  subscription_root.rs
rust/app-graphql-surrealdb/src/app/user/: connection.example.rs  error.rs  guards.rs  mod.rs  model.rs  model_oauth.rs  mutation_root.rs  query_root.rs  statements.rs  subscription_root.rs
rust/app-graphql-surrealdb/src/handlers/: oauth.rs
rust/app-graphql-surrealdb/src/utils/: configuration.rs  graphql.rs  token.rs
rust/app-grpc-surrealdb/: Cargo.toml  build.rs
rust/app-grpc-surrealdb/src/: main.rs
rust/app-grpc-surrealdb/src/app/app_analytics/: model.rs  service.rs
rust/app-grpc-surrealdb/src/app/greetings/: hello.rs
rust/app-grpc-surrealdb/src/app/music/: fan.rs
rust/app-grpc-surrealdb/src/utils/: configuration.rs
rust/lib-common/: Cargo.toml
rust/lib-common/src/: lib.rs
rust/lib-common/src/authentication/: mod.rs  password.rs  session_state.rs  surrealdb_session.rs
rust/lib-common/src/configurations/: surrealdb.rs
rust/lib-common/src/middleware/: log.rs  session.rs
rust/lib-my-macros/: Cargo.toml
rust/lib-my-macros/derive/: Cargo.toml
rust/lib-my-macros/derive/src/examples/: foo_bar.rs
rust/lib-my-macros/derive/src/fields_getter/: helpers.rs  mod.rs  parser.rs  trait_generator.rs
rust/lib-my-macros/src/: main.rs
rust/lib-my-macros/tests/: fields_getter.rs
rust/lib-scripts/: Cargo.toml  build.rs
rust/xHOW-TO/: code-organization.md
typescript/: .dockerignore  .eslintrc.cjs  .gitignore  .npmrc  .prettierignore  Dockerfile.dev  Dockerfile.development  Dockerfile.local  Dockerfile.prod  Dockerfile.production  README.md  __tsconfig.build.txt  copy-packages.sh  deno.json  dprint.json  import_map.json  install-packages-for-all.sh  jest.config.js  kkk.md  makefile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  rome.json  slim.report.json  tsconfig.build.json  tsconfig.json  turbo.json
typescript/.husky/: pre-commit
typescript/app-react-web/: deno.txt  index.html  package.json  pnpm-lock.yaml  server.js  tsconfig.json  vite.config.mjs  vite.config.txt
typescript/app-react-web/src/: entry-client.tsx  entry-server.tsx  main.tsx  main.txt  mockTodos.ts  router.tsx  utils.tsx
typescript/app-web/: .eslintrc.cjs  .gitignore  global.d.ts  index.html  package.json  playwright.config.ts  server.js  tsconfig.dev.json  tsconfig.json  vite.config.ts
typescript/app-web/compiled-lang/: en.json  fr.json
typescript/app-web/lang/: fr.json
typescript/app-web/scripts/: syncLocales.test.ts  syncLocales.ts
typescript/app-web/src/: entry-client.tsx  entry-server.tsx  global.d.ts  main.tsx  mm.tsx  mockTodos.ts  router.tsx  utils.tsx
typescript/app-web/tests/: example.spec.ts  vite-playwright.spec.ts
typescript/apps/docs/: next.config.js  package.json
typescript/apps/docs/pages/: index.tsx
typescript/apps/frontend-main/: next.config.js  package-lock.json  package.json  tsconfig.json
typescript/apps/web/: .eslintrc.js  App.test.tsx  cypress.config.ts  inde  index.d.ts  next.config.js  package.json  tailwind.config.js  tsconfig.json  tsconfig.server.json
typescript/frontend-main/: next.config.js  package-lock.json  package.json
typescript/frontend-main/pages/: index.tsx
typescript/lib-graphql/: Makefile  babelrc.js  codegen.js  codegen.ts  codegen.yml  deno.json  index.ts  my-config.ts  package.json  tsconfig.json
typescript/lib-graphql/operations/: authentication.graphql  users.graphql
typescript/lib-graphql/scripts/: codegen.ts  remove_unwanted_files.ts  sanitizeImports.ts
typescript/lib-graphql/src/: gql.ts  graphql.ts  index.ts
typescript/lib-graphql/zeus/: const.ts  index.ts
typescript/lib-ui/: index.tsx  package.json  trial.ts
typescript/lib-ui/.storybook/: main.js  preview.js
typescript/lib-ui/components/: Button.tsx
typescript/lib-ui/hooks/: useInterval.ts
typescript/lib-ui/pages/: index.tsx
typescript/lib-ui/stories/: Button.stories.tsx
typescript/patches/: ts-pattern@4.0.6.patch
typescript/ts-monorepo/: package.json
typescript/xHOW-TO/: update-graphql-operations.md
xHOW-TO/: code-structure.md  rust-workspace.md
(+729 files in other folders)
