[package]
name = "app-graphql-surrealdb"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-common = { workspace = true }
lib-my-macros = { workspace = true }
quote = { workspace = true }
surrealdb = { workspace = true }
surrealdb-rs = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }

async-graphql = { workspace = true }

async-graphql-poem = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
redis = { workspace = true }
oauth2 = { workspace = true }
reqwest = { workspace = true }

bson = { workspace = true }
# chrono = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slab = { workspace = true }
typed-builder = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

lru = { workspace = true }
# lru = { workspace = true }
multimap = { workspace = true }

anyhow = { workspace = true }
argon2 = { workspace = true }
convert_case = { workspace = true }
env_logger = { workspace = true }
envy = { workspace = true }
# hmac = { workspace = true }
# sha2 = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
urlencoding = { workspace = true }
lazy_static = { workspace = true }

async-trait = { workspace = true }
config = { workspace = true }
crossbeam = { workspace = true }
derive_more = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
ron = { workspace = true }
serde-aux = { workspace = true }
ts-rs = { workspace = true }

backoff = { workspace = true }

[dev-dependencies]
strum = { workspace = true }
strum_macros = { workspace = true }
# You can also use the "derive" feature, and import the macros directly from "strum"
# strum = { workspace = true }
