[package]
name = "app-grpc-surrealdb"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
lib-common = { workspace = true }
lib-my-macros = { workspace = true }
surrealdb = { workspace = true }
tonic = { workspace = true }
# tonic = { workspace = true }
log = { workspace = true }
tonic-web = { workspace = true }
prost = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
futures-core = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
hyper = { workspace = true }
pin-project = { workspace = true }
tower-service = { workspace = true }
tracing = { workspace = true }


tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bson = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slab = { workspace = true }
typed-builder = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

async-trait = { workspace = true }
config = { workspace = true }
crossbeam = { workspace = true }
derive_more = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
ron = { workspace = true }
serde-aux = { workspace = true }
urlencoding = { workspace = true }
envy = { workspace = true }
secrecy = { workspace = true }
futures = { workspace = true }

# async-stream = "0.3"
# prost = { workspace = true }
# tokio = { workspace = true }
# tokio-stream = { workspace = true }
# tower = { workspace = true }
# # Required for routeguide
# rand = { workspace = true }
# serde = { workspace = true }
# serde_json = { workspace = true }
# # Tracing
# tracing = { workspace = true }
# tracing-attributes = { workspace = true }
# tracing-futures = { workspace = true }
# tracing-subscriber = { workspace = true }
# # Required for wellknown types
# prost-types = { workspace = true }
# # Hyper example
# hyper = { workspace = true }
# pin-project = { workspace = true }
# warp = { workspace = true }
# # Health example
# # Reflection example
# listenfd = { workspace = true }
# # grpc-web example
# bytes = { workspace = true }


[dev-dependencies]


[build-dependencies]
tonic-build = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
