[package]
author = "Oyelowo Oyedayo"
edition = "2021"
name = "lib-common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3.48", features = [
  "redis-session",
  "session",
  "websocket",
  "prometheus",
  "multipart",
  "cookie",
  "compression",
  "sse",
  "i18n",
  "test",
  "anyhow",
  # "eyre",
  "tokio-metrics",
  "opentelemetry",
  "opentelemetry-http",
] }
surrealdb = "1.0.0-beta.8"
surrealdb-rs = { git = "https://github.com/surrealdb/surrealdb.rs", branch = "main" }

async-trait = "0.1.58"
anyhow = "1.0.66"
async-graphql = "4.0.16"
argon2 = { version = "0.4.1", features = ["std"] }
chrono = { version = "0.4.23", features = ["serde"] }
chrono-tz = "0.6.3"
envy = "0.4.2"
futures = "0.3.25"
hmac = { version = "0.12.1", features = ["std"] }
log = "0.4.17"
rand = "0.8.5"
secrecy = "0.8.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
serde-aux = "3.1.0"
sha2 = "0.10.6"
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
# Observability
tracing = "0.1.37"

redis = { version = "0.22.1", features = [
  "tokio-comp",
  "tokio-native-tls-comp",
] }

bson = "2.4.0"


# For Oauth
url = "2.3.1"
typed-builder = "0.10.0"
reqwest = { version = "0.11.13", default-features = false, features = [
  "rustls-tls",
] }
oauth2 = "4.3.0"
derive_more = "0.99.17"
lib-my-macros = { path = "../lib-my-macros" }
validator = { version = "0.16.0", features = ["derive"] }
multimap = "0.8.3"
lru = "0.7.8"

[dev-dependencies]
surf = "2.3.2"
reqwest = "0.11.13"
tokio = { version = "1.22.0", features = ["macros"] }
cargo-watch = "8.1.2"
isahc = "1.7.2"
env_logger = "0.9.3"
tokio-test = "0.4.2"
pretty_assertions = "1.3.0"
wiremock = "0.5.15"
