[project]
name = "lib-common"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-my-macros = { workspace = true }
poem = { workspace = true }
surrealdb = { workspace = true }
surrealdb-rs = { workspace = true }

async-trait = { workspace = true }
anyhow = { workspace = true }
async-graphql = { workspace = true }
argon2 = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
envy = { workspace = true }
futures = { workspace = true }
hmac = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-aux = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
# Observability
tracing = { workspace = true }

redis = { workspace = true }

bson = { workspace = true }


# For Oauth
url = { workspace = true }
typed-builder = { workspace = true }
reqwest = { workspace = true }
oauth2 = { workspace = true }
derive_more = { workspace = true }
validator = { workspace = true }
multimap = { workspace = true }
lru = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }

env_logger = { workspace = true }
tokio-test = { workspace = true }
pretty_assertions = { workspace = true }
wiremock = { workspace = true }
