[project]
edition = "2021"
name = "lib-my-macros"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive = {path = "./derive"}
# hello-macro-derive = { workspace = true }
# macro-derive = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
# syn = { version = { workspace = true }
# quote = { workspace = true }
# Inflector = { workspace = true }
# proc-macro-crate = { workspace = true }
darling = { workspace = true }
convert_case = { workspace = true }
serde = { workspace = true }
# thiserror = { workspace = true }
# proc-macro2-diagnostics = { workspace = true }

# [lib]
# proc-macro = true
# crate_type = ["proc-macro"]
