[package]
name = "derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# syn = "1.0"
proc-macro2 = "1.0.47"
proc-macro-crate = "1.2.1"
syn = { version = "1.0.103", features = ["full", "extra-traits", "visit-mut", "visit"] }
quote = "1.0.21"
# Inflector = "0.11.4"
# proc-macro-crate = "1.1.0"
darling = "0.14.2"
thiserror = "1.0.37"
proc-macro2-diagnostics = "0.9"
convert_case = "0.5.0"
strum = "0.24.1"
strum_macros = "0.24"
# You can also use the "derive" feature, and import the macros directly from "strum"
# strum = { version = "0.24", features = ["derive"] }


serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"

[lib]
proc-macro = true
# crate_type = ["proc-macro"]
