[project]
name = "derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# syn = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro-crate = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
# Inflector = { workspace = true }
darling = { workspace = true }
thiserror = { workspace = true }
proc-macro2-diagnostics = { workspace = true }
convert_case = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
# You can also use the "derive" feature, and import the macros directly from "strum"
# strum = { workspace = true }


serde = { workspace = true }
serde_json = { workspace = true }

[lib]
proc-macro = true
# crate_type = ["proc-macro"]
